--- a/radixconfig.yaml
+++ b/radixconfig.yaml
@@ -1,7 +1,7 @@
 apiVersion: radix.equinor.com/v1
 kind: RadixApplication
 metadata:
-  name: smailandstuff
+  name: fdilsmailandstuff
 spec:
   # build:
     # secrets:
@@ -22,7 +22,7 @@ spec:
         - environment: production
           variables:
             TENANTID: "3aa4a235-b6e2-48d5-9195-7fcf05b459b0"
-            CLIENTID: "bc5ee045-a194-4c04-acf9-1718f58bf5c6"
+            CLIENTID: "186bd1ef-c52d-4bcf-a0eb-92d493a3f5dc"
             NODE_ENV: "development"
       secrets:
         - CLIENTSECRET
